# swagger_output.json
@@ -66,12 +66,6 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -115,9 +109,9 @@
     "/auth/consumer/signup": {
       "post": {
         "tags": [
-          "Consumidor"
+          "Email"
         ],
-        "description": "Cria conta de consumidor.",
+        "description": "<Manda email",
         "parameters": [
           {
             "name": "body",
@@ -169,8 +163,8 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -220,12 +214,64 @@
         }
       }
     },
+    "/auth/consumer/verifyCode": {
+      "post": {
+        "tags": [
+          "Estabelecimento"
+        ],
+        "description": "Valida codigo verificação.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "codigoVerificacao": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/consumer/validation": {
+      "get": {
+        "tags": [
+          "Consumidor"
+        ],
+        "description": "Endpoint para verificar se cpf é valido.",
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/auth/admin/signup": {
       "post": {
         "tags": [
-          "Administrador"
+          "Email"
         ],
-        "description": "Cria conta de administrador.",
+        "description": "<Manda email",
         "parameters": [
           {
             "name": "body",
@@ -256,8 +302,8 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -307,6 +353,173 @@
         }
       }
     },
+    "/auth/admin/verifyCode": {
+      "post": {
+        "tags": [
+          "Estabelecimento"
+        ],
+        "description": "Valida codigo verificação.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "codigoVerificacao": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/manageEstablishment,": {
+      "put": {
+        "tags": [
+          "Administrador"
+        ],
+        "description": "Aprovar/reprovar Estabelecimento.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "idUsuario": {
+                  "example": "any"
+                },
+                "status": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/manageEstablishment": {
+      "get": {
+        "tags": [
+          "Administrador"
+        ],
+        "description": "Aprovar/reprovar Estabelecimento.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/admin/": {
+      "get": {
+        "tags": [
+          "Administrador"
+        ],
+        "description": "busca os dados de um admin. para buscar basta mandar o token la no header",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Administrador"
+        ],
+        "description": "Atualiazar admin, ja estou pegando id pelo token",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "any"
+                },
+                "telefone": {
+                  "example": "any"
+                },
+                "dataNasc": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/consumer/{id}": {
       "put": {
         "tags": [
@@ -339,6 +552,9 @@
                   "example": "any"
                 },
                 "endereco": {
+                  "example": "any"
+                },
+                "numero": {
                   "example": "any"
                 },
                 "bairro": {
@@ -407,7 +623,7 @@
         "tags": [
           "Consumidor"
         ],
-        "description": "Busca todas informações de um estabelecimento.",
+        "description": "Busca todas informações de um estabelecimento. passar id Consumidor",
         "parameters": [
           {
             "name": "id",
@@ -422,6 +638,9 @@
           },
           "422": {
             "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -429,9 +648,9 @@
     "/auth/establishment/signup": {
       "post": {
         "tags": [
-          "Estabelecimento"
+          "Email"
         ],
-        "description": "Cria uma conta de estabelecimento.",
+        "description": "<Manda email",
         "parameters": [
           {
             "name": "body",
@@ -501,6 +720,48 @@
         }
       }
     },
+    "/auth/establishment/verifyCode": {
+      "post": {
+        "tags": [
+          "Estabelecimento"
+        ],
+        "description": "Valida codigo verificação.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "codigoVerificacao": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/auth/establishment/login": {
       "post": {
         "tags": [
@@ -530,6 +791,32 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/establishment/validation": {
+      "get": {
+        "tags": [
+          "Estabelecimento"
+        ],
+        "description": "Endpoint para verificar se CNPJ é valido.",
+        "parameters": [
+          {
+            "name": "cpf",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -588,6 +875,12 @@
                 },
                 "urlImagem": {
                   "example": "any"
+                },
+                "horarioAbertura": {
+                  "example": "any"
+                },
+                "horarioFechamento": {
+                  "example": "any"
                 }
               }
             }
@@ -639,6 +932,11 @@
           },
           {
             "name": "nota",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "nome",
             "in": "query",
             "type": "string"
           }
@@ -704,6 +1002,9 @@
           },
           "422": {
             "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -754,6 +1055,83 @@
       }
     },
     "/establishmentFuel/{id}": {
+      "delete": {
+        "tags": [
+          "EstabelecimentoCombustivel"
+        ],
+        "description": "Endpoint para Excluir um combustivel de um estabelecimento (passe idEstabelecimentoCombustivel). Precisa de autorização",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "EstabelecimentoCombustivel"
+        ],
+        "description": "Endpoint para atualizar um combustivel de um estabelecimento (passe idEstabelecimentoCombustivel). Precisa de autorização",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "quantidade": {
+                  "example": "any"
+                },
+                "preco": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "get": {
         "tags": [
           "EstabelecimentoCombustivel"
@@ -798,6 +1176,9 @@
                 },
                 "idEstabelecimento": {
                   "example": "any"
+                },
+                "idConsumidor": {
+                  "example": "any"
                 }
               }
             }
@@ -806,55 +1187,9 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "409": {
             "description": "Conflict"
-          },
-          "422": {
-            "description": "Unprocessable Entity"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "Avaliação"
-        ],
-        "description": "Endpoint para Atualizar um combustivel. Precisa de autorização",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "descricao": {
-                  "example": "any"
-                },
-                "nota": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -897,6 +1232,82 @@
           },
           "422": {
             "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/rating/{idAvaliacao}": {
+      "patch": {
+        "tags": [
+          "Avaliação"
+        ],
+        "description": "Endpoint para Atualizar um combustivel. Precisa de autorização",
+        "parameters": [
+          {
+            "name": "idAvaliacao",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "descricao": {
+                  "example": "any"
+                },
+                "nota": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/rating/getConsumerRating": {
+      "get": {
+        "tags": [
+          "Avaliação"
+        ],
+        "description": "Endpoint para obter uma avaliação de um consumidor para um estabelecimento.",
+        "parameters": [
+          {
+            "name": "idEstabelecimento",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "idConsumidor",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -997,9 +1408,6 @@
                 "status": {
                   "example": "any"
                 },
-                "descricao": {
-                  "example": "any"
-                },
                 "idDenuncia": {
                   "example": "any"
                 }
@@ -1011,6 +1419,12 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "422": {
             "description": "Unprocessable Entity"
           },
@@ -1020,7 +1434,7 @@
         }
       }
     },
-    "/uploadImage/consumer": {
+    "/uploadImage/": {
       "post": {
         "tags": [
           "Upload de Imagens"
@@ -1030,15 +1444,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
